put in actual domain

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta property="og:title" content="Vegetarian Dining in Denver">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://drewrwilson.com/denver-veg-dining/">
-	<meta property="og:image" content="http://drewrwilson.com/denver-veg-dining/denver-veg-checklist.jpg">
-	<meta property="og:site_name" content="drewrwilson.com">
+	<meta property="og:url" content="http://VegDenver.org">
+	<meta property="og:image" content="http://VegDenver.org/denver-veg-checklist.jpg">
+	<meta property="og:site_name" content="VegDenver.org">
 	<meta property="og:description" content="A quick visual guide to good vegetarian dining in Denver">
 
 
